--- a/client/src/index.html
+++ b/client/src/index.html
@@ -7,14 +7,12 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mukta:300,400,700">
-  <!-- SHOULD BE CHANGED -->
-  <!-- <link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css"> -->
-
-
 
   <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
 </head>
 <body>
-  <app-root></app-root>
+    <div class="wrapper">
+        <app-root></app-root>
+    </div>
 </body>
 </html>
