--- a/client/src/index.html
+++ b/client/src/index.html
@@ -7,6 +7,9 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mukta:300,400,700">
+  <style>
+    @import url('https://fonts.googleapis.com/css?family=Oswald:300');
+    </style>
 
   <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
 </head>
