--- a/client/src/index.html
+++ b/client/src/index.html
@@ -11,7 +11,7 @@
     @import url('https://fonts.googleapis.com/css?family=Oswald:300');
     </style>
 
-  <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
     <div class="wrapper">
